# weeks

./: LICENSE  README.md  mutation.sh  pyproject.toml
report/: index.html
report/mutants/: 1.html  2.html  3.html  4.html
tests/: test_amount_of_weeks.py
weeks/: amount_of_weeks.py
