[tool.poetry]
name = "weeks"
version = "0.1.0"
description = "Functions to calculate weeks between two dates"
authors = ["André Rocha <rocha.matcomp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
MutPy = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
